@@ -53,6 +53,8 @@ StarPU 1.3.5 (git revision xxx)
 Small features:
   * New environment variable STARPU_FXT_SUFFIX to set the filename in
     which to save the fxt trace
+  * New option -d for starpu_fxt_tool to specify in which directory to
+    generate files
 
 Small changes:
   * Move MPI cache functions into the public API
